--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -12,12 +12,17 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python 3.11
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: 3.11
+          python-version: 3.10
 
-      - name: Install packages
+      - name: Upgrade pip and key packages
+        run: |
+          python -m pip install --upgrade pip
+          pip install --upgrade cython scikit-learn
+
+      - name: Install project dependencies
         run: make install
 
       - name: Lint
