--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,36 +1,23 @@
 name: CI
-
 on:
   push:
-    branches: ["main"]
+    branches: [ "main" ]
   pull_request:
-    branches: ["main"]
+    branches: [ "main" ]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Python 3.11
-        uses: actions/setup-python@v4
-        with:
-          python-version: 3.11
-
-      - name: Install dependencies
+      - uses: actions/checkout@v3
+      - name: install packages
         run: make install
-
-      - name: Lint
+      - name: lint
         run: make lint
-
-      - name: Test
+      - name: test
         run: make test
-
-      - name: Format
+      - name: format
         run: make format
-
-      - name: Deploy
+      - name: deploy
         run: make deploy
