--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,4 +1,5 @@
-name: CI
+name: CI Pipeline
+
 on:
   push:
     branches: [ "main" ]
@@ -9,15 +10,36 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        python-version: [3.11]
+
     steps:
-      - uses: actions/checkout@v3
-      - name: install packages
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Upgrade pip and install dependencies
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          pip install -r requirements.txt
+
+      - name: Run install
         run: make install
-      - name: lint
+
+      - name: Run linting
         run: make lint
-      - name: test
-        run: make test
-      - name: format
+
+      - name: Run formatting
         run: make format
-      - name: deploy
+
+      - name: Run tests
+        run: make test
+
+      - name: Deploy (placeholder)
         run: make deploy
