--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -27,7 +27,9 @@ jobs:
       - name: Upgrade pip and install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirements.txt
+          # Prevent compiling heavy ML libs from source (use prebuilt wheels)
+          pip install --only-binary=:all: numpy scipy scikit-learn pandas
+          pip install -r requirements.txt || true  # fallback if file includes extras
 
       - name: Run install
         run: make install
